fixed button bg and text css readability because of white/dark mode conflict

--- a/src/style.css
+++ b/src/style.css
@@ -189,8 +189,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-    --background: '#1e1e2f';
-    --foreground: '#ffffff';
+    --background: #1e1e2f;
+    --foreground: #ffffff;
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.141 0.005 285.823);
     --popover: oklch(1 0 0);
@@ -282,7 +282,7 @@ button:focus, button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  button {
+  button:not([class]) {
     background-color: #f9f9f9;
   }
 }
